# python-example-droid-dataset

./: .gitignore  GroundingDINO_with_Segment_Anything.ipynb  commands.txt  difference.py  imitation_flow_maxim.ipynb  my_difference.py  my_plot_everything.py  process02-plot.ipynb  process02.ipynb  process04-diff.ipynb  process04.ipynb  process05-sift.ipynb  process06-flow-basic.ipynb  process06-flow-examples.ipynb  process06-flow.ipynb  process07-flowcheck.ipynb  process07-segment.ipynb  process08-distance.ipynb  process10-grounded-all.ipynb  process10-grounded.ipynb  pyproject.toml  trash04-diff.ipynb  trash05-sift.ipynb  trash06-flow-basic.ipynb  trash07-segment.ipynb  trash07-similarity.ipynb  trash08-distance.ipynb
cheatsheet/: bast.html  common.css  cppbasic.html  cppq.html  image.html  index.html  json.html  octagon.html  pathlib.html  torch.html  ubuntu-conda.html  ubuntu-install.html  vim.html
droidloader/: common.py  my_episode_list.py  my_loader.py  my_sam.py  raw.py  trash_difference.py  trash_videoreader.py
scripts/: dirlist.py  my_download_raw.py  numbers.py  process01.py  process03.py
src/: common.py  difference.py  example_videoreader.py  example_videoreader_sam.py  flow.py  list_episodes.py  my_episode_list.py  my_image_saver.py  my_loader.py  my_sam.py  my_videoreader.py  process_imitation_flow.py  projection.py  raw.py  test_raw.py  trash_difference.py  trash_flow.py  videoreader.py
