# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata 
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["droidloader"]

[tool.black]
line-length = 100

[project]
name = "droidloader"
version = "0.0.1"
authors = [{ name = "Maxim Velikanov", email = "maximelianos@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[project.optional-dependencies]
dev = []
